src/test/deca/etapeB/valid/read_int_float.deca
// Description:
//  Instruction readInt
//
// Resultats:
//    ok
// 
// Historique:
//    cree le 01/01/2016

{
    int a = readInt();
    float b = readFloat();
}
