src/test/deca/etapeB/invalid/decl_init/init_string_in_float.deca
// Description:
//    Déclaration de variables
//
// Resultats:
//    ok
// 
// Historique:
//    cree le 01/01/2016

{
   float a = "test";
}
